// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<div
  className="lds-css ng-scope"
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  }
>
  <div
    className="lds-spinner "
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`rendering snapshots should render valid snapshot with passed props 1`] = `
<div
  className="lds-css ng-scope"
  style={
    Object {
      "height": 70,
      "lineHeight": 10,
      "width": 60,
    }
  }
>
  <div
    className="lds-spinner my-test-class"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;
